@@ -2,8 +2,8 @@
 
 Groovy unit tests run under Spock + HubitatCI via the Gradle wrapper. CI runs `./gradlew test` on every PR and push to `main` (`.github/workflows/unit-tests.yml`).
 
-- **Test framework:** Spock 2.3 on Groovy 2.5 (matches the Hubitat hub runtime)
-- **Hubitat sandbox:** [joelwetzel/hubitat_ci](https://github.com/joelwetzel/hubitat_ci) — an actively-maintained fork of the original [biocomp/hubitat_ci](https://github.com/biocomp/hubitat_ci) (Apache 2.0). Consumed as `com.github.joelwetzel:hubitat_ci:<sha>` via JitPack; the pinned SHA in `build.gradle` is bumped by tracking issues from `.github/workflows/hubitat-ci-version-check.yml`.
+- **Test framework:** Spock 2.3 on Groovy 3.0 (Hubitat's hub runtime is Groovy 2.4, and `eighty20results/hubitat_ci` actively tests its behaviour against that runtime — case-insensitive enum matching, locale-safe `toLowerCase`, etc. — so Groovy 3.0 stays the closest practical match).
+- **Hubitat sandbox:** [eighty20results/hubitat_ci](https://github.com/eighty20results/hubitat_ci) — an actively-maintained Groovy 3.0 fork of the original [biocomp/hubitat_ci](https://github.com/biocomp/hubitat_ci) (Apache 2.0). Consumed as `com.github.eighty20results:hubitat_ci:<tag>` via JitPack; the pinned release tag in `build.gradle` is bumped by tracking issues from `.github/workflows/hubitat-ci-version-check.yml`. Sandbox-loaded production code that references `hubitat.helper.{RMUtils, NetworkUtils}` is routed through `support.PassThroughSandboxClassLoader` (installed via `support.PassThroughAppValidator`) so our literal-named stubs at `src/main/groovy/hubitat/helper/` resolve without hitting the JVM's §5.3.5 name-equality check — the raw-vs-remapped class mismatch that would otherwise NCDFE at runtime. Groovy 3 is module-aware, so the JDK 11+ `--add-opens` workaround from the Groovy-2.5 era is no longer needed.
 - **JVM:** OpenJDK 17 in CI; locally, JDK 11+ via the Gradle toolchain
 - **Build:** Gradle 8.10 via wrapper (`./gradlew test`)
 
@@ -23,9 +23,11 @@ HTML report at `build/reports/tests/test/index.html`. CI uploads it as the `test
 
 `src/test/groovy/support/HarnessSpec.groovy`. On each spec's `setup()`:
 
-1. `HubitatAppSandbox.compile()` compiles `hubitat-mcp-server.groovy` without running its `preferences { }` / `definition { }` blocks. (Those blocks use the multi-page form `page(name: "mainPage")` which HubitatCI's `AppPreferencesReader` mishandles — `compile()` sidesteps the issue cleanly. All `def method() { }` handlers remain callable on the returned script.)
-2. `AppExecutor` is Spock-mocked to expose `state` and `atomicState`.
-3. Groovy metaclass overrides on the loaded script bind `Map`-backed `stateMap` / `atomicStateMap` and the `HubInternalGetMock` to `state` / `atomicState` / `hubInternalGet`.
+1. `HubitatAppSandbox.run()` compiles `hubitat-mcp-server.groovy` with `support.PassThroughAppValidator` providing `Flags.DontValidatePreferences / DontValidateDefinition / DontRestrictGroovy / DontRunScript`. We use `run()` rather than `compile()` because `compile()` eagerly adds `DontRunScript` to `validationFlags`, which flips HubitatCI's `readValidator` precedence and silently discards the `validator:` option — meaning a custom `PassThroughAppValidator` would never fire. The validator carries `DontRunScript` itself so `setupImpl` still skips the auto-`script.run()` call; the multi-page `preferences { page(name: "mainPage") }` body HubitatCI's `AppPreferencesReader` mishandles stays unexecuted. All `def method() { }` handlers remain callable on the returned script.
+2. `AppExecutor` is Spock-mocked to expose `state`, `atomicState`, `getChildDevices()`, `now()`, and `log` — eighty20results' `AppChildExecutor` leaves these on the `@Delegate` path to the supplied `AppExecutor`.
+3. `hubInternalGet` isn't part of `AppExecutor`'s interface, so it's metaclass-injected on the loaded script along with the `Map`-backed `stateMap` / `atomicStateMap` / `HubInternalGetMock` wiring.
+4. `addChildApp`, `getChildApps`, `getChildAppById`, `getChildAppByLabel`, and `deleteChildApp` are intercepted by reflecting into `HubitatAppScript`'s private `childAppFactory` and `childAppAccessor` closure fields and replacing them with harness closures that route to spec-controlled fixtures (`mockChildAppForCreate`, `childAppsList`). eighty20results' `HubitatAppScript` defines these as concrete methods that call those private closures internally, and per-instance `metaClass` overrides are bypassed by the script body's intra-class dispatch — verified empirically in PR #100's first CI run before the reflective approach replaced the metaClass attempt.
+5. A `childAppResolver` closure is passed into `sandbox.run()` so eighty20results' options validator accepts the sandbox options; the closure throws `IllegalStateException` on call, because the reflective `childAppFactory` replacement should short-circuit first. If the resolver ever fires, it means an eighty20results API change broke the harness and the error points the spec author at the right place to look.
 
 Tool specs extend `ToolSpecBase` (which extends `HarnessSpec`) and add fixtures for `settings`, `getChildDevices()`, `getChildApps()`, and a deterministic `now()`.
 
@@ -33,15 +35,17 @@ Tool specs extend `ToolSpecBase` (which extends `HarnessSpec`) and add fixtures 
 
 `src/test/groovy/rules/RuleHarnessSpec.groovy`. Same shape as `HarnessSpec` but loads `hubitat-mcp-rule.groovy` instead of the server file, and exposes a mockable `parent` (the server reference the rule engine reads from for `findDevice` etc.).
 
+`parent` is a writable property on the spec: specs assign it in their `given:` block (e.g. `parent = new SmokeParent(...)`), and the setter propagates the value to the loaded script via `HubitatAppScript.setParent()`. eighty20results' `HubitatAppScript` defines `parent` as a private field accessed via its `@CompileStatic` `getProperty("parent")` override, so mocking `AppExecutor.getParent()` no longer intercepts property access — `setParent()` is the only reliable hook.
+
 ### Mocks
 
 - **`HubInternalGetMock`** — `register(path) { params -> response }`. Unstubbed paths throw `IllegalStateException` so tests fail loudly rather than silently returning null.
 - **`NetworkUtilsMock`** — install/uninstall pattern. Records calls to `hubitat.helper.NetworkUtils.sendHubitatCommand(Map)`.
-- **`RMUtilsMock`** — install/uninstall pattern. Records calls to `hubitat.helper.RMUtils.{getRuleList, sendAction, pauseRule, resumeRule, setRuleBoolean}`.
+- **`RMUtilsMock`** — install/uninstall pattern. Records calls to `hubitat.helper.RMUtils.{getRuleList, sendAction, pauseRule, resumeRule, setRuleBoolean}`. `install()` mutates the static metaClass on `hubitat.helper.RMUtils` (the main-source-set stub at `src/main/groovy/hubitat/helper/RMUtils.groovy`); both test-side direct calls and sandbox-loaded production calls (the latter routed through `PassThroughSandboxClassLoader` bypass of eighty20results' remap) land on the mock. `RMUtilsSandboxInterceptionSpec` is the end-to-end regression proving the sandbox path works — bump that spec if an eighty20results upgrade breaks the PassThrough scaffold.
 
-### Test-only classpath stubs
+### Main-source-set helper stubs
 
-`src/test/groovy/support/stubs/hubitat/helper/NetworkUtils.groovy` and `.../RMUtils.groovy` exist so production code that references those Hubitat platform classes can load under the test JVM without `ClassNotFoundException`. They ship only on the test classpath.
+`src/main/groovy/hubitat/helper/RMUtils.groovy` and `.../NetworkUtils.groovy` are main-source-set stubs of Hubitat's platform helpers. They exist so both test-side Groovy references AND sandbox-loaded production code can resolve these classes under the test JVM. Sandbox-loaded references get here via `support.PassThroughSandboxClassLoader`, which bypasses eighty20results' standard `hubitat.X` → `me.biocomp.hubitat_ci.api.X` remap for the specific class names we stub. Main-source-set rather than test-source-set because `SandboxClassLoader`'s parent chain (AppClassLoader) sees Gradle's main source-set output but not the test classpath. Not deployed to the hub — `packageManifest.json` ships only `hubitat-mcp-server.groovy` and `hubitat-mcp-rule.groovy`. To add a new helper, stub at `src/main/groovy/hubitat/<pkg>/<Class>.groovy` AND add its FQN to `PassThroughSandboxClassLoader.PASSTHROUGH_NAMES`.
 
 ## Adding a new server tool spec
 
@@ -54,7 +58,9 @@ Tool specs extend `ToolSpecBase` (which extends `HarnessSpec`) and add fixtures 
 
 ## Recipe: testing PR #79's `manage_rule_machine` tools (RMUtils)
 
-The `RMUtilsMock` is wired into the harness explicitly so PR #79's `manage_rule_machine` gateway tools can be unit-tested without a real hub. Pattern:
+The `RMUtilsMock` is wired into the harness explicitly so PR #79's `manage_rule_machine` gateway tools can be unit-tested without a real hub. Sandbox-loaded production code reaches the mock via the `PassThroughSandboxClassLoader` → main-source-set stub → metaClass-installed mock chain; test-side direct calls hit the same stub and mock. `RMUtilsSandboxInterceptionSpec` keeps the full chain honest across eighty20results bumps.
+
+Pattern:
 
 ```groovy
 import support.RMUtilsMock
@@ -86,7 +92,7 @@ class ToolListRmRulesSpec extends ToolSpecBase {
 }
 ```
 
-`RMUtilsMock.install()` uses Groovy metaclass static-method injection to intercept calls to `hubitat.helper.RMUtils.{getRuleList, sendAction, pauseRule, resumeRule, setRuleBoolean}`. Always pair it with `uninstall()` in `cleanup()` — cleanup uses `GroovySystem.metaClassRegistry.removeMetaClass()` for reliable teardown between specs (simply setting `metaClass = null` is unreliable because of class-metaclass caching).
+`RMUtilsMock.install()` uses Groovy metaclass static-method injection on `hubitat.helper.RMUtils` to intercept `{getRuleList, sendAction, pauseRule, resumeRule, setRuleBoolean}`. Always pair it with `uninstall()` in `cleanup()` — cleanup uses `GroovySystem.metaClassRegistry.removeMetaClass()` for reliable teardown between specs (simply setting `metaClass = null` is unreliable because of class-metaclass caching).
 
 ## Native Rule Machine access
 
@@ -97,11 +103,28 @@ Issue #69 originally asked whether HubitatCI could install and drive the real `R
 
 Mock-installing the real `RuleMachine.groovy` under HubitatCI is moot: Hubitat's built-in apps ship as compiled bytecode in the hub firmware; source code is not published by Hubitat, so there's nothing for `HubitatAppSandbox` to load. The two paths above cover the actual capability need.
 
+## Adding a new rule-engine spec
+
+1. Create `src/test/groovy/rules/<Feature>Spec.groovy` extending `rules.RuleHarnessSpec`.
+2. In `given:`, assign `parent = new SomeParentStub(...)` if the code path uses `parent.findDevice(...)` etc. The setter propagates into the script.
+3. Seed `stateMap`, `atomicStateMap`, or `settingsMap` as needed.
+4. Call `script.<method>(args)` in `when:`.
+5. Assert on return value, state mutations, or Spy interactions on the stubbed parent/device.
+
+## Adding a new Hubitat helper stub
+
+Some production code references platform helper classes like `hubitat.helper.RMUtils`. The sandbox can't resolve these at runtime out of the box — eighty20results remaps the name, but the JVM's §5.3.5 name-equality check rejects the remapped class. To make a new helper resolvable:
+
+1. Stub the class at `src/main/groovy/hubitat/<pkg>/<Class>.groovy`. Method signatures should mirror the real Hubitat API surface your production code uses. Return stub/no-op values — real behaviour is wired per-test via a metaClass-based mock (see `RMUtilsMock` for the pattern).
+2. Add the FQN (e.g. `'hubitat.helper.FooUtils'`) to `support.PassThroughSandboxClassLoader.PASSTHROUGH_NAMES`.
+3. If you want per-test behaviour mocking, add a `FooUtilsMock` in `src/test/groovy/support/` mirroring `RMUtilsMock`'s shape. Use `GroovySystem.metaClassRegistry.removeMetaClass()` in `uninstall()` for reliable teardown.
+4. Add a `FooUtilsSandboxInterceptionSpec` modeled on `RMUtilsSandboxInterceptionSpec` if sandbox-side interception matters for your tools; it's the bump-canary when eighty20results upgrades.
+
 ## CI
 
 - Workflow: `.github/workflows/unit-tests.yml`
 - Triggers on `pull_request` targeting `main` and `push` to `main`
-- JDK 17 (Temurin) via `actions/setup-java@v4`
-- Gradle wrapper cached by `gradle/actions/setup-gradle@v4`
-- Runs `./gradlew test --info`
+- JDK 17 (Temurin) via `actions/setup-java@v5`
+- Gradle wrapper cached by `gradle/actions/setup-gradle@v6`
+- Runs `./gradlew test --info --warning-mode all`
 - Uploads `build/reports/tests/test/` as the `test-report` artifact on failure
